# Car-Price-FastAPI

./: Dockerfile  README.md  docker-compose.yml  main.py  prometheus.yml  pyproject.toml  render.yaml  requirements.txt
app/: main.py
app/api/: routes_auth.py  routes_predict.py
app/cache/: redis_cache.py
app/core/: config.py  dependencies.py  exceptions.py  security.py
app/middleware/: logging_middleware.py
app/services/: model_service.py
notebooks/: sample.ipynb
training/: train_model.py  train_utils.py
