[project]
name = "fastapi-e2e-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.116.1",
    "ipykernel>=6.30.1",
    "numpy>=2.3.2",
    "pandas>=2.3.2",
    "prometheus-fastapi-instrumentator>=7.1.0",
    "python-dotenv>=1.1.1",
    "redis>=6.4.0",
    "scikit-learn>=1.7.1",
    "uvicorn>=0.35.0",
]
